# indmoney-ops-suite-FP

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  config.py  conftest.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: weekly-pulse.yml
core/: __init__.py  error_logger.py  exceptions.py  instructor_clients.py  llm_client.py  logger.py  request_context.py
data/: hitl_queue.db
data/bm25_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/fees/: elss_exit_load.md
data/manifests/: source_manifest.json
data/reviews/: reviews.csv
docs/: SOURCES.md  architecture.md  data_seeding.md  evals.md  improvements.md  mcpIntegration.md  problemStatement.md  ragA.md  rules.md  themeClassification.md  voiceagent.md
evals/: EVALS.md  adversarial_dataset.json  generate_report.py  golden_dataset.json  llm_judge.py  rag_eval_results.json  run_rag_eval.py  run_safety_eval.py  run_ux_eval.py  safety_eval_results.json  ux_eval_results.json
schemas/: __init__.py  base.py  booking.py  eval.py  hitl.py  pulse.py  rag.py
scripts/: clean_reviews.py  generate_pulse.py  generate_source_manifest.py  ingest_kb.py  run_all_evals.py  run_full_pipeline.py  scrape_reviews.py  smoke_test_answerer.py  smoke_test_retrieval.py  validate_data.py  verify_capstone_compliance.py
tests/: test_p0_foundation.py  test_p1_schemas.py  test_p2_data.py  test_p3_pillar_a.py  test_p4_pillar_b.py  test_p56_hitl.py  test_p7_integration.py  test_safety.py
(+26 files in other folders)
