[project]
name = "indmoney-ops-suite"
version = "0.1.0"
description = "Unified AI dashboard for customer-review intelligence, knowledge base, and HITL ops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.0",
    "chromadb>=0.5.20",
    "diskcache>=5.6.0",
    "google-api-python-client>=2.140.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "instructor>=1.8.0",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.13.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.50.0",
    "tenacity>=9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["core", "schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-recording>=0.13.0",
    "ruff>=0.6.0",
    "syrupy>=4.6.0",
]
